den1-k8s01/warehouse20/nzbget/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nzbget
  name: nzbget
  namespace: warehouse20
spec:
  selector:
    matchLabels:
      app: nzbget
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      automountServiceAccountToken: false
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 1.1.1.1
          - 1.0.0.1
      containers:
      - name: nzbget
        image: linuxserver/nzbget:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 6789
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: "0.5"
            memory: 512Mi
          limits:
            cpu: "2"
            memory: 2Gi
        # securityContext:
        #   runAsUser: 1024
        #   runAsGroup: 100
        volumeMounts:
        - mountPath: /config
          name: config
          subPath: config
        - mountPath: /mnt/media/store01/downloads/nzbget
          name: media
          subPath: downloads/nzbget
      volumes:
      - name: config
        persistentVolumeClaim:
            claimName: nzbget-data
      - name: media
        persistentVolumeClaim:
          claimName: media-store01
