den1-k8s01/warehouse20/nzbget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: warehouse20
  labels:
    app: nzbget
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: http
      port: 6789
      protocol: TCP
  selector:
    app: nzbget
