den1-k8s01/warehouse20/nzbget/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nzbget
  namespace: warehouse20
spec:
  podSelector:
    matchLabels:
      app: nzbget
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: organizr
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: sonarr
    - podSelector:
        matchLabels:
          app: radarr
    - namespaceSelector:
        matchLabels:
          app: ingress-public
    ports:
    - protocol: TCP
      port: http
